--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,6 @@
 *.less linguist-language=C
 *.js linguist-language=C
 *.html linguist-language=C
-*.md linguist-language=C
+*.md linguist-language=Markdown
 *.png linguist-language=C
 
